//////////////////////////////////////////////////////
// ENUM
//////////////////////////////////////////////////////

Enum user_role {
  MAHASISWA
  PETUGAS
  ADMIN
}

Enum complaint_status {
  MENUNGGU
  DIPROSES
  SELESAI
}

//////////////////////////////////////////////////////
// USERS
//////////////////////////////////////////////////////

Table users {
  id            int         [pk, increment]
  name          varchar(100)  [not null, note: 'Nama lengkap pengguna']
  email         varchar(100)  [not null, unique, note: 'Email login unik']
  password_hash varchar(255)  [not null, note: 'Hash password']
  role          user_role     [not null, note: 'Peran akses']
  created_at    datetime      [default: `CURRENT_TIMESTAMP`]
  updated_at    datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Master akun pengguna'
  Indexes {
    (role)
  }
}

//////////////////////////////////////////////////////
// MAHASISWA
//////////////////////////////////////////////////////

Table mahasiswa {
  id          int          [pk, ref: > users.id]
  nim         varchar(20)  [not null, unique]
  created_at  datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Profil mahasiswa'
}

//////////////////////////////////////////////////////
// UNITS
//////////////////////////////////////////////////////

Table units {
  id          int           [pk, increment]
  name        varchar(100)  [not null, unique]
  description text
  is_active   bool           [default: true]
  created_at  datetime       [default: `CURRENT_TIMESTAMP`]
  updated_at  datetime       [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (is_active)
  }

  Note: 'Master unit penerima laporan'
}

//////////////////////////////////////////////////////
// PETUGAS
//////////////////////////////////////////////////////

Table petugas {
  id          int          [pk, ref: > users.id]
  unit_id     int          [not null, ref: > units.id]
  jabatan     varchar(100)
  created_at  datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Profil petugas unit'

  Indexes {
    (unit_id)
  }
}

//////////////////////////////////////////////////////
// ADMIN
//////////////////////////////////////////////////////

Table admin {
  id          int          [pk, ref: > users.id]
  level       varchar(50)  [default: 'superadmin']
  created_at  datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Profil admin sistem'
}

//////////////////////////////////////////////////////
// CATEGORIES
//////////////////////////////////////////////////////

Table categories {
  id          int           [pk, increment]
  unit_id     int           [not null, ref: > units.id]
  name        varchar(100)  [not null, unique]
  description text
  is_active   bool          [default: true]
  created_at  datetime      [default: `CURRENT_TIMESTAMP`]
  updated_at  datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Kategori laporan'

  Indexes {
    (unit_id)
    (is_active)
  }
}

//////////////////////////////////////////////////////
// COMPLAINTS
//////////////////////////////////////////////////////

Table complaints {
  id             int                [pk, increment]
  mahasiswa_id   int                [not null, ref: > mahasiswa.id]
  category_id    int                [not null, ref: > categories.id]
  title          varchar(150)       [not null]
  description    text               [not null]
  evidence_path  varchar(255)
  status         complaint_status   [not null, default: 'MENUNGGU']
  created_at     datetime           [default: `CURRENT_TIMESTAMP`]
  updated_at     datetime           [default: `CURRENT_TIMESTAMP`]
  resolved_at    datetime

  Note: 'Transaksi pengaduan mahasiswa'

  Indexes {
    (mahasiswa_id)
    (category_id)
    (status)
  }
}

//////////////////////////////////////////////////////
// COMPLAINT NOTES
//////////////////////////////////////////////////////

Table complaint_notes {
  id            int       [pk, increment]
  complaint_id  int       [not null, ref: > complaints.id]
  petugas_id    int       [not null, ref: > petugas.id]
  note          text      [not null]
  created_at    datetime  [default: `CURRENT_TIMESTAMP`]

  Note: 'Catatan tindak lanjut petugas'

  Indexes {
    (complaint_id)
    (petugas_id)
  }
}

